MD Extensions: add button to clear all error from error console.

Bug: 787964
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I54837b7ffb8166c74ce9d06946d3c0b9e7211bee
Reviewed-on: https://chromium-review.googlesource.com/818330
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Commit-Queue: Scott Chen <scottchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523872}
Former-commit-id: 4adc0f5c0c3eef4265d039cfe6afc28d7037cc63